# tree-house

./: .gitignore  CMakeLists.txt  README.md
data/sklearn_models/: DT_1.json  adult.answer.csv  adult.test.csv  bank.answer.csv  bank.test.csv  letter.answer.csv  letter.test.csv  magic.answer.csv  magic.test.csv  satlog.answer.csv  satlog.json  satlog.test.csv  sensorless.answer.csv  sensorless.json  spambase.answer.csv  spambase.json  spambase.test.csv  wine-quality.answer.csv  wine-quality.answer__.csv  wine-quality.test.csv  wine-quality.test_.csv  wine-quality_.json
data/xgb_models/: abalone.answer.csv  abalone.test.csv  airline-ohe.answer.csv  airline.answer.csv  airline.test.csv  covtype.answer.csv  covtype.test.csv  epsilon.answer.csv  higgs.answer.csv  higgs.test.csv  letters.answer.csv  letters.test.csv  year_prediction_msd.answer.csv
example/: CMakeLists.txt  main_example.cpp
frontend/: CMakeLists.txt  csvreader.h  decisiontree.h  frontend.cpp  jsonparser.h  main.cpp  modulebuilder.h  sklearnparser.h  xgboostparser.h
include/Tree/: CMakeLists.txt  TreeDialect.h  TreeDialect.td  TreeOps.h  TreeOps.td  TreePasses.h  TreePasses.td  TreeTypes.h  TreeTypes.td
include/Tree-c/: Dialects.h
lib/: CMakeLists.txt
lib/CAPI/: CMakeLists.txt  Dialects.cpp
lib/Tree/: CMakeLists.txt  TreeDialect.cpp  TreeOps.cpp  TreePasses.cpp  TreeTypes.cpp
python/: CMakeLists.txt  TreeExtension.cpp
python/mlir_tree/dialects/: TreeOps.td  tree.py
src/: CMakeLists.txt  main.cpp
src/execute/: CMakeLists.txt  csvreader.cpp  csvreader.h  modulerunner.cpp  modulerunner.h
src/frontend/: csvreader.h  decisiontree.h  jsonparser.h  sklearnparser.h  xgboostparser.h
src/test/: CMakeLists.txt  maincommon.cpp  maintest.cpp  maintest.h  sklearntest.cpp  xgboosttest.cpp
test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
test/CAPI/: CMakeLists.txt  tree-capi-test.c
test/Standalone/: dummy.mlir  standalone-opt.mlir  standalone-pass-plugin.mlir  standalone-plugin.mlir  standalone-translate.mlir
test/python/: smoketest.py
tree-opt/: CMakeLists.txt  tree-opt.cpp
tree-plugin/: CMakeLists.txt  tree-plugin.cpp
tree-translate/: CMakeLists.txt  tree-translate.cpp
